Sider Collapsing Fixed

--- a/web/src/Components/Sider/layout.sider.scss
+++ b/web/src/Components/Sider/layout.sider.scss
@@ -77,7 +77,6 @@
 
     .sider-menu-container {
 
-      display: flex;
       overflow-y: auto;
       max-height: 70vh;
       padding-top: 10px;
